# python-geoaddress

.github/workflows/: django-geoaddress-release.yml  django-geoaddress-test.yml  django-geoaddress.yml  placeHolder.yml  python-geoaddress-release.yml  python-geoaddress-test.yml  python-geoaddress.yml
.github/workkflows/: placeHolder.yml
django-geoaddress/: README.md  pyproject.toml
django-geoaddress/src/django_geoaddress/: fields.py  translation_catalog.py
django-geoaddress/src/django_geoaddress/locale/fr/LC_MESSAGES/: django.mo  django.po
django-geoaddress/src/django_geoaddress/management/commands/: addresses_autocomplete.py  reverse_geocode.py  search_addresses.py
django-geoaddress/src/django_geoaddress/static/js/: geoaddress_autocomplete.js
django-geoaddress/src/django_geoaddress/templates/django_geoaddress/: address_detail.html
django-geoaddress/tests/: settings.py
python-geoaddress/: pyproject.toml
python-geoaddress/src/geoaddress/: __init__.py
python-geoaddress/src/geoaddress/providers/: geoapify.py  geocode_earth.py  google.py  here.py  locationiq.py  mapbox.py  maps_co.py  nominatim.py  opencage.py  photon.py
python-geoaddress/src/geoaddress/providers/base/: __init__.py
python-geoaddress/tests/: test_metadata.py
